--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -212,8 +212,11 @@ img {
    margin-top: 1em;
    margin-left: 200px;
 }
+#popupMessage .buttonsWrapper {
+   margin: 2em auto 0;
+   text-align: center;
+}
 #popupMessage button {
-   margin-top: 1em;
    padding: 7px 20px;
    background-color: #4a90e2;
    color: #fff;
@@ -223,8 +226,7 @@ img {
    font-weight: bold;
    text-transform: uppercase;
    font-size: 12px;
-   margin: 2em auto 0;
-   display: block;
+   cursor: pointer;
 }
 #popupMessage button.buttonYes::before {
   content: "\f00c";
