--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -44,6 +44,10 @@ body > * {
   box-sizing: border-box;
 }
 
+.interfaceToggled {
+  display: none !important;
+}
+
 /*****************
   EDITOR MENU
 *****************/
