--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -573,7 +573,8 @@ h2.sectionTitle .icon {
   -webkit-appearance: none;
   appearance: none;
   background-color: transparent;
-  width: 100px;
+  min-width: 100px;
+  width: 100%;
   margin-top: 6px;
 }
 /* Chrome */
