quickAlgo-Python: Add variables to allowable "keywords", improve display

--- a/pemFioi/taskStyles-mobileFirst.css
+++ b/pemFioi/taskStyles-mobileFirst.css
@@ -253,3 +253,7 @@ img {
   cursor: pointer;
   color: #4D87CE;
 }
+.pythonIntroSimple code.pflForbidden,
+.pythonIntroFull code.pflForbidden {
+  cursor: not-allowed;
+}
