--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -585,7 +585,6 @@ h2.sectionTitle .icon {
 /* Chrome */
 .speedCursor::-webkit-slider-runnable-track {
   background-color: rgba(0,0,0,0.3);
-  width: 100px;
   height: 5px;
   border-radius: 5px;
   margin-top: -6px;
@@ -623,7 +622,7 @@ h2.sectionTitle .icon {
 }
 /* Edge / IE10+ */
 .speedCursor::-ms-track {
-  width: 100px;
+  width: 100%;
   height: 5px;
   background: transparent;
   /*leave room for the larger thumb to overflow with a transparent border */
