--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -393,7 +393,7 @@ p {
     background-color: transparent;
     flex: 0 1 100%;
   }
-  #gridContainer #grid {
+  #gridContainer .gridArea {
     background-color: #fff;
     flex: 1 1 auto;
   }
@@ -402,13 +402,19 @@ p {
 /*****************
   TASK GRID & TESTS
 *****************/
-#grid {
+.gridArea {
+    position: relative;
     overflow-x: auto;
     max-width: 100%;
     flex-grow: 1;
     z-index: 2;
-    padding: 6px;
     text-align: center;
+    min-height: 200px;
+}
+#grid {
+    position: absolute;
+    width: 100%;
+    height: 100%;
 }
 #testSelector {
     padding-left: 10px;
