task introduction scroll on landscape mobiles

--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -247,6 +247,7 @@ p {
   position: static !important;
   display: flex;
   justify-content: stretch;
+  min-height: 0;
 }
 #introGrid {
   display: flex;
