--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -52,7 +52,9 @@ body > * {
   EDITOR MENU
 *****************/
 #tabsContainer.noLevelTabs {
-  justify-content: flex-end;
+  -webkit-box-pack: end;
+    -ms-flex-pack: end;
+        justify-content: flex-end;
 }
 #openEditorMenu {
   position: relative;
@@ -137,19 +139,37 @@ body > * {
 }
 #editorMenu .editorActions {
   height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-transform: uppercase;
 }
 #editorMenu .editorActions div {
-  flex: 1 1 0;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0px;
+          flex: 1 1 0;
   padding: 20px;
   position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: space-evenly;
-  align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   border-top: 1px solid #5c5c5c;
   cursor: pointer;
   text-align: center;
@@ -165,7 +185,9 @@ body > * {
     height: auto;
   }
   #editorMenu .editorActions div {
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
   }
 }
 #editorMenu .editorActions div:first-child {
@@ -181,11 +203,17 @@ body > * {
 @media /* Landscape mobiles */
   screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   #editorMenu .editorActions {
-    flex-direction: row;
-    flex-wrap: wrap;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
   }
   #editorMenu .editorActions div {
-    flex: 1 1 50%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 50%;
+            flex: 1 1 50%;
     padding: 20px 0;
     font-size: 10px;
     border-right: 1px solid #5c5c5c;
@@ -235,23 +263,39 @@ p {
   margin: 0 0 15px 0;
 }
 #task {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
-  justify-content: stretch;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
   height: 100vh;
   width: 100vw;
-
 }
 #taskContent {
-  flex: 2 0 0;
+  -webkit-box-flex: 2;
+      -ms-flex: 2 0 0px;
+          flex: 2 0 0;
   position: static !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: stretch;
+  -webkit-box-pack: stretch;
+      -ms-flex-pack: stretch;
+          justify-content: stretch;
   min-height: 0;
 }
 #introGrid {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex: 1 1 40%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 40%;
+          flex: 1 1 40%;
   min-height: 0;
 }
 #taskIntro {
@@ -260,28 +304,47 @@ p {
 }
 #gridContainer {
   background-color: #fff;
-  flex: 1 0 50%;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 50%;
+          flex: 1 0 50%;
   width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  flex-direction: column;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
 }
 
 @media /* Mobiles */
   screen and (max-width: 767px) and (orientation: portrait),
   screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape) {
   .mode-player #taskContent {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   .mode-player #introGrid {
-    flex: 1 0 40%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 40%;
+        flex: 1 0 40%;
   }
   .mode-instructions #introGrid {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     width: 100%;
   }
   .mode-instructions #taskIntro {
-    order: 2;
-    flex: 1 1 0;
+    -webkit-box-ordinal-group: 3;
+        -ms-flex-order: 2;
+            order: 2;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 0px;
+            flex: 1 1 0;
   }
   .mode-player #taskIntro,
   .mode-instructions #blocklyLibContent,
@@ -304,21 +367,36 @@ p {
     background-color: #fff;
   }
   .mode-player #taskContent {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
   }
   .mode-player #introGrid {
     min-width: 0;
-    flex: 0 0 50%;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .mode-instructions #introGrid {
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   }
   .mode-editor #editorBar {
     display: none;
   }
   .fullscreen .mode-editor #editorBar {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   #taskIntro {
@@ -332,17 +410,30 @@ p {
     padding-bottom: 5px;
   }
   .mode-instructions #introGrid {
-    flex: 1 0 40%;
+    -webkit-box-flex: 1;
+      -ms-flex: 1 0 40%;
+          flex: 1 0 40%;
   }
   .mode-instructions #gridContainer {
     min-width: 0;
-    flex: 0 0 40%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 40%;
+            flex: 0 0 40%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    justify-content: space-between;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
   }
   .mode-player #blocklyLibContent {
-    flex: 0 0 60%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 60%;
+            flex: 0 0 60%;
     min-width: 0;
     margin: 10px 10px 0 10px;
   }
@@ -351,12 +442,17 @@ p {
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
 
   #taskContent {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
   }
   #introGrid {
     position: relative;
     margin-bottom: 10px;
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
   }
   #introGrid .speedControls {
     position: absolute;
@@ -365,38 +461,56 @@ p {
     width: 40%; /* Must be the same width as the task intro */
     padding-top: 10px;
     border-top: 3px solid #fff;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-evenly;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+      justify-content: space-evenly;
     background-color: #f1f2f7;
-    box-shadow: 0 1px 0 0px #ccc inset;
+    -webkit-box-shadow: 0 1px 0 0px #ccc inset;
+            box-shadow: 0 1px 0 0px #ccc inset;
   }
   #taskIntro {
-    flex: 1 1 40%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 40%;
+            flex: 1 1 40%;
     background-color: #fff;
     padding-bottom: 50px;
   }
   #gridContainer {
-    flex: 1 0 60%;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 60%;
+            flex: 1 0 60%;
     min-width: 0;
   }
 }
 @media /* Tablets landscape and desktop */
   screen and (min-width: 855px) and (orientation: landscape) {
   #introGrid {
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     max-width: 40%;
   }
   #taskIntro {
     background-color: #fff;
-    flex: 1 0 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
   }
   #gridContainer {
     background-color: transparent;
-    flex: 0 1 100%;
+    -webkit-box-flex: 0;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
   }
   #gridContainer .gridArea {
     background-color: #fff;
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
   }
 }
 
@@ -407,7 +521,9 @@ p {
     position: relative;
     overflow-x: auto;
     max-width: 100%;
-    flex-grow: 1;
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
+            flex-grow: 1;
     z-index: 2;
     text-align: center;
     min-height: 150px;
@@ -468,12 +584,16 @@ p {
   padding: 0;
 }
 #testSelector .tabs {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
   line-height: 24px;
   text-align: center;
 }
 #testSelector .tabs .testTab {
-  flex: 1 0 auto;
+  -webkit-box-flex: 1;
+    -ms-flex: 1 0 auto;
+        flex: 1 0 auto;
   cursor: pointer;
   padding: 2px;
   text-transform: uppercase;
@@ -528,8 +648,12 @@ p {
   PLAYER CONTROLS
 *****************/
 .playerControls {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
   width: 100%;
   margin: 0 10px;
   vertical-align: bottom;
@@ -539,7 +663,8 @@ p {
 }
 .speedControls {
   position: relative;
-  flex-shrink: 0;
+  -ms-flex-negative: 0;
+    flex-shrink: 0;
 }
 .speedControls .icon span {
   padding: 5px 10px;
@@ -573,7 +698,11 @@ p {
   display: none;
 }
 #taskToolbar .mode .speedControls {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+    -ms-flex-pack: center;
   justify-content: center;
   align-items: center;
   margin-top: -4px;
@@ -583,6 +712,8 @@ p {
   background-color: rgba(0,0,0,0.3);
   box-shadow:inset 0 1px 0 0 rgba(0,0,0,0.50);
   border-radius:15px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 .speedCursor {
@@ -665,12 +796,16 @@ p {
 }
 
 #introGrid .speedControls {
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   padding: 10px;
 }
 #introGrid .playerControls,
 #introGrid .speedSlider {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
   display: inline-flex;
+  -ms-flex-pack: distribute;
   justify-content: space-around;
   background-color: transparent;
   border-radius: 0;
@@ -713,16 +848,23 @@ p {
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
   screen and (min-width: 855px) and (orientation: landscape) {
   #introGrid .speedControls {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
   }
   #introGrid .playerControls {
+    -webkit-box-pack: center;
+      -ms-flex-pack: center;
     justify-content: center;
   }
 }
 @media /* Tablets portrait */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
   .speedControls {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    qq-ms-flex-pack: distribute;
     justify-content: space-around;
     padding: 0 10px;
   }
@@ -748,21 +890,25 @@ body.fullscreen #taskToolbar {
 }
 #blocklyLibContent {
   width: 100%;
-  flex: 1 0 60%;
+  -webkit-box-flex: 1;
+    -ms-flex: 1 0 60%;
+        flex: 1 0 60%;
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
   screen and (min-width: 855px) and (orientation: landscape) {
   #blocklyLibContent {
     width: auto;
-    flex: 1 0 60%;
+    -webkit-box-flex: 1;
+    -ms-flex: 1 0 60%;
+        flex: 1 0 60%;
     min-width: 0;
     background: #fff;
   }
 }
 #blocklyDiv {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
 }
 #blocklyLibContent {
   position: relative;
@@ -784,11 +930,17 @@ body.fullscreen #taskToolbar {
     #editorBar {
       height: 30px;
       background-color: #fff;
+      display: -webkit-box;
+      display: -ms-flexbox;
       display: flex;
+      -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
       justify-content: space-between;
     }
     #capacity {
-      flex-grow: 1;
+      -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+              flex-grow: 1;
     }
     #editorBar button {
       border: 0;
@@ -811,8 +963,12 @@ body.fullscreen #taskToolbar {
     right: 0;
     padding-top: 10px;
     z-index: 10;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: flex-start;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+          align-items: flex-start;
   }
   #capacity {
     margin-right: 5px;
@@ -822,7 +978,9 @@ body.fullscreen #taskToolbar {
     display: block;
     font-size: 14px;
     padding: 8px 12px;
-    flex-grow: 0;
+    -webkit-box-flex: 0;
+    -ms-flex-positive: 0;
+        flex-grow: 0;
     color: #fff;
     background: #4a90e2;
     border: 0;
@@ -864,7 +1022,7 @@ body.fullscreen #taskToolbar {
 }
 #messages {
   padding-top:10px;
-    min-height: 28px;
+  min-height: 28px;
 }
 #errors .testError {
   color: red;
@@ -962,7 +1120,9 @@ body.fullscreen #taskToolbar {
   TASK TOOLBAR
 *****************/
 #taskToolbar {
-  flex: 0 0 auto;
+  -webkit-box-flex: 0;
+    -ms-flex: 0 0 auto;
+        flex: 0 0 auto;
   z-index: 1;
   position: relative;
 }
@@ -975,7 +1135,9 @@ body.fullscreen #taskToolbar {
     visibility: hidden;
     overflow: hidden;
     height: 0;
-    flex: 0 0 0;
+    -webkit-box-flex: 0;
+    -ms-flex: 0 0 0px;
+        flex: 0 0 0;
   }
 }
 #taskToolbar::after {
@@ -991,26 +1153,40 @@ body.fullscreen #taskToolbar {
   font-size: 18px;
 }
 #modeSelector {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
 }
 #modeSelector .mode {
-  flex: 0 1 51px;
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 51px;
+          flex: 0 1 51px;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 15px;
   background-color: #4a4a4a;
   color: #fff;
   position: relative;
 }
 #modeSelector .mode#mode-editor {
-  justify-content: space-between;
+  -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
 }
 #modeSelector .mode:not(.active) {
-  justify-content: center;
+  -webkit-box-pack: center;
+    -ms-flex-pack: center;
+        justify-content: center;
 }
 #modeSelector .mode.active {
   background: #4a90e2;
-  flex: 2 0 auto;
+  -webkit-box-flex: 2;
+    -ms-flex: 2 0 auto;
+        flex: 2 0 auto;
 }
 #modeSelector .mode.active::before {
   content: " ";
@@ -1086,9 +1262,15 @@ body.fullscreen #taskToolbar {
   }
 }
 .errorMessage .messageWrapper {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   height: 100%;
 }
 .errorMessage .messageWrapper .icon {
@@ -1101,7 +1283,9 @@ body.fullscreen #taskToolbar {
   border-radius: 50%;
 }
 .errorMessage .messageWrapper .message {
-  flex: 1 1 auto;
+  -webkit-box-flex: 1;
+    -ms-flex: 1 1 auto;
+        flex: 1 1 auto;
   margin: 0;
 }
 .errorMessage .btn {
@@ -1152,9 +1336,15 @@ body.fullscreen #taskToolbar {
   background-color: #777;
   background-color: rgba(0,0,0,0.7);
   transition: all 250ms;
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 .modalWrapper .modal {
   width: 800px;
@@ -1274,9 +1464,15 @@ button.showLongIntro .icon {
   text-decoration: none;
 }
 .panel-heading {
+  display: -webkit-box;
+  display: -ms-flexbox;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
   padding: 15px;
   border-bottom: 1px solid rgba(0,0,0,0.1);
 }
