--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -119,7 +119,8 @@ body > * {
 
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #editorMenu {
     width: 250px;
     right: -250px;
@@ -180,7 +181,8 @@ body > * {
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #editorMenu .editorActions {
     height: auto;
   }
@@ -439,7 +441,7 @@ p {
   }
 }
 @media /* Tablets portrait */
-  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  screen and (min-width: 768px) and (orientation: portrait) {
 
   #taskContent {
     -webkit-box-orient: vertical;
@@ -451,10 +453,8 @@ p {
     position: relative;
     margin-bottom: 10px;
     -webkit-box-flex: 1;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
-    min-height: 250px;
-    max-height: 40%;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
   }
   #introGrid .speedControls {
     position: absolute;
@@ -499,14 +499,14 @@ p {
   #taskIntro {
     background-color: #fff;
     -webkit-box-flex: 1;
-        -ms-flex: 0 1 auto;
-            flex: 0 1 auto;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
   }
   #gridContainer {
     background-color: transparent;
     -webkit-box-flex: 0;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
+        -ms-flex: 0 1 100%;
+            flex: 0 1 100%;
   }
   #gridContainer .gridArea {
     background-color: #fff;
@@ -640,7 +640,8 @@ p {
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #testSelector .tabs .testTab {
     line-height: 36px;
   }
@@ -848,7 +849,8 @@ p {
 
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #introGrid .speedControls {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -861,7 +863,7 @@ p {
   }
 }
 @media /* Tablets portrait */
-  screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait) {
+  screen and (min-width: 768px) and (orientation: portrait) {
   .speedControls {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -898,7 +900,8 @@ body.fullscreen #taskToolbar {
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #blocklyLibContent {
     width: auto;
     -webkit-box-flex: 1;
@@ -958,7 +961,8 @@ body.fullscreen #taskToolbar {
 @media /* landscape mobiles, tablets and desktop */
   screen and (min-width: 480px) and (max-width: 854px) and (orientation: landscape),
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #editorBar {
     position: absolute;
     top: 10px;
@@ -1130,7 +1134,8 @@ body.fullscreen #taskToolbar {
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
 /* Hide task toolbar for tablets and desktop,
   but keep element as it is used to calculate other elements position in JS */
   #taskToolbar {
@@ -1436,7 +1441,8 @@ button.showLongIntro .icon {
 }
 @media /* Tablets and desktop */
   screen and (min-width: 768px) and (max-width: 1024px) and (orientation: portrait),
-  screen and (min-width: 855px) and (orientation: landscape) {
+  screen and (min-width: 855px) and (orientation: landscape),
+  screen and (min-width: 1025px) {
   #taskIntro .long {
     display: none;
   }
