--- a/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
+++ b/pemFioi/quickAlgo/quickAlgo-mobileFirst.css
@@ -453,8 +453,10 @@ p {
     position: relative;
     margin-bottom: 10px;
     -webkit-box-flex: 1;
-        -ms-flex: 1 1 auto;
-            flex: 1 1 auto;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
+    min-height: 250px;
+    max-height: 40%;
   }
   #introGrid .speedControls {
     position: absolute;
@@ -499,14 +501,14 @@ p {
   #taskIntro {
     background-color: #fff;
     -webkit-box-flex: 1;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
+        -ms-flex: 0 1 auto;
+            flex: 0 1 auto;
   }
   #gridContainer {
     background-color: transparent;
     -webkit-box-flex: 0;
-        -ms-flex: 0 1 100%;
-            flex: 0 1 100%;
+        -ms-flex: 1 0 100%;
+            flex: 1 0 100%;
   }
   #gridContainer .gridArea {
     background-color: #fff;
